# flake_rba

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
src/flake_rba/: flake8_module.py  plugin.py  utils.py
src/py_template/: template.py
tests/: conftest.py  test_async.py  test_module.py  test_sync.py  test_temlate.py
