[metadata]
name = py_template
description = modules to analyze python code
author = Mikhail Stepanov
platforms = unix, linux, osx
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3 :: 3.7
    Programming Language :: Python :: 3 :: 3.8
    Programming Language :: Python :: 3 :: 3.9

[options]
packages =
    py_template
install_requires =
    numpy
python_requires = >=3.7
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest_cov>=2.0
    tox>=3.24
    mypy>=0.910
    flake8>=3.9

[options.package_data]
py_template = py.typed

[flake8]
max_line_length = 120